--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name="com.example.gratefulnote.MainFragment"
+        android:name="com.example.gratefulnote.mainfragment.MainFragment"
         android:label="MainFragment"
         tools:layout="@layout/main_fragment"/>
 </navigation>
