Menambahkan banyak hal
- Menambahkan viewModelFactory pada addgratitude (dan menambahkan beberapa dependency)
- Menambahkan fitur navigating setelah click button
- Memodifikasi/merefactor nama-nama file pada paket database

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -18,5 +18,9 @@
         android:id="@+id/addGratetitudeFragment"
         android:name="com.example.gratefulnote.addgratitudefragment.AddGratetitudeFragment"
         android:label="fragment_add_gratitude"
-        tools:layout="@layout/fragment_add_gratitude" />
+        tools:layout="@layout/fragment_add_gratitude" >
+        <action
+            android:id="@+id/action_addGratetitudeFragment_to_mainFragment"
+            app:destination="@id/mainFragment" />
+    </fragment>
 </navigation>
