Menambahkan fitur delete item pada recyclerview
- Menambahkan fungsi untuk mendelete item sesuai id di database pada file
PositiveEmotionDatabaseDao dan MainViewModel

- Menambahkan onclicklistener pada viewholder jika ingin mendelete

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -18,8 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toTopOf="@+id/button"
-            tools:layout_editor_absoluteX="1dp"
-            android:layout_marginBottom="24dp"/>
+            android:layout_marginBottom="100dp"
+            tools:layout_editor_absoluteX="1dp" />
 
         <Button
             android:id="@+id/button"
@@ -31,7 +31,6 @@
             android:text="@string/add_gratitude"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             android:onClick="@{() -> viewModel.onClickAddNewGratitude()}"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
