--- a/app/src/main/res/layout/positive_emotion_list.xml
+++ b/app/src/main/res/layout/positive_emotion_list.xml
@@ -53,7 +53,7 @@
             tools:text="(Serenity)" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/delete_positive_emotion"
             android:layout_width="32dp"
             android:layout_height="44dp"
             android:layout_marginEnd="12dp"
