--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -18,7 +18,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toTopOf="@+id/button"
-            android:layout_marginBottom="100dp"
+            app:layout_constraintTop_toBottomOf="@id/selected_date"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginVertical="100dp"
             tools:layout_editor_absoluteX="1dp" />
 
         <Button
@@ -33,5 +36,30 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:onClick="@{() -> viewModel.onClickAddNewGratitude()}"/>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/selected_date"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/date_selector_label"
+            app:hintAnimationEnabled="false"
+            app:startIconDrawable="@drawable/ic_calendar"
+            >
+            <AutoCompleteTextView
+                android:id="@+id/selected_date_value"
+                android:text="@{viewModel.selectedDateString}"
+                android:padding="18dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="none"
+                android:labelFor="@id/selected_date_value"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
