Menambahkan fungsi filter by date
- Memodifikasi fungsi getAllPositiveEmotion pada PositiveEmotionDatabaseDao
- Mengubah onclicklistener menjadi ontouchlistener untuk datepicker agar sekali
klik, dialog langsung muncul pada MainFragment
- Menghandle fungsionalitas ketika memfilter data by date di MainViewModel

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -47,12 +47,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/date_selector_label"
-            app:hintAnimationEnabled="false"
             app:startIconDrawable="@drawable/ic_calendar"
             >
             <AutoCompleteTextView
                 android:id="@+id/selected_date_value"
-                android:text="@{viewModel.selectedDateString}"
+                android:text="@{viewModel.displayedDateString}"
                 android:padding="18dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
