Mempercantik UI dan memfix bug
- Menggunakan spinner (sebelumnya menggunakan material menu) karena sebelumnya ada bug (item hilang sendiri ketika ganti fragment atau orientation ganti)
- Mengatur ulang main layout agar lebih rapi

--- a/app/src/main/res/layout/positive_emotion_list.xml
+++ b/app/src/main/res/layout/positive_emotion_list.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/solid_border"
-        android:layout_margin="24dp">
+        android:layout_margin="12dp">
 
         <TextView
             android:id="@+id/tanggal"
@@ -22,31 +22,42 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginTop="12dp"
-            android:textSize="25sp"
+            android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="22-01-2013" />
 
-        <TextView
-            android:id="@+id/penyebab"
-            penyebab="@{positiveEmotion}"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:layout_marginBottom="12dp"
-            android:layout_marginStart="12dp"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tanggal"
-            tools:text="Dapat duit dari tuhan" />
+        <HorizontalScrollView
+                android:id="@+id/horizonal_scroll_view"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginBottom="12dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/delete_positive_emotion"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tanggal">
+            <TextView
+                android:id="@+id/penyebab"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_marginBottom="6dp"
+                penyebab="@{positiveEmotion}"
+                android:textSize="18sp"
+                tools:text="Dapat duit dari tuhan"
+                android:scrollbars="horizontal"/>
+        </HorizontalScrollView>
 
         <TextView
             android:id="@+id/tipe"
             tipe="@{positiveEmotion}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:layout_marginStart="6dp"
+            android:textSize="12sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/tanggal"
             app:layout_constraintStart_toEndOf="@+id/tanggal"
             android:text="@string/positive_emotion_type_formatting"
