--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -15,15 +15,14 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="24dp"
             app:layout_constraintBottom_toTopOf="@+id/button"
-            app:layout_constraintTop_toBottomOf="@id/selected_date"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="100dp"
-            android:layout_marginTop="150dp"
-            tools:layout_editor_absoluteX="1dp" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/selected_date" />
 
         <Button
             android:id="@+id/button"
@@ -44,7 +43,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
-            android:layout_marginTop="6dp"
             android:hint="@string/date_selector_label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/filter_title"
@@ -52,6 +50,7 @@
 
             <AutoCompleteTextView
                 android:id="@+id/selected_date_value"
+                android:textSize="14sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="none"
@@ -60,34 +59,35 @@
                 android:text="@{viewModel.displayedDateString}" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/positive_emotion_filter_layout"
-            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/spinner_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@id/selected_date"
-            app:layout_constraintEnd_toStartOf="@id/selected_date"
-            android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
-            android:hint="@string/type_of_positive_emotion">
+            app:layout_constraintBottom_toBottomOf="@+id/selected_date"
+            app:layout_constraintTop_toTopOf="@+id/selected_date"
+            app:layout_constraintEnd_toStartOf="@+id/selected_date"
+            app:strokeColor="@color/black"
+            app:strokeWidth=".55dp">
 
-            <AutoCompleteTextView
-                android:id="@+id/positive_emotion_filter_value"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="none" />
-
-        </com.google.android.material.textfield.TextInputLayout>
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </com.google.android.material.card.MaterialCardView>
 
         <TextView
             android:id="@+id/filter_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/filter_by"
-            android:textSize="18sp"
-            android:layout_marginTop="24dp"
-            app:layout_constraintStart_toStartOf="@+id/positive_emotion_filter_layout"
+            android:textSize="14sp"
+            android:layout_marginTop="12dp"
+            app:layout_constraintStart_toStartOf="@id/spinner_layout"
             app:layout_constraintTop_toTopOf="parent" />
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
