Berhasil solve bug ketika rotate, edittext hilang
- Menghapus debug log
- Membetulkan bug ketika rotating pada EditPositiveEmotion

--- a/app/src/main/res/layout/positive_emotion_list.xml
+++ b/app/src/main/res/layout/positive_emotion_list.xml
@@ -85,7 +85,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/delete_positive_emotion"
                 app:srcCompat="@drawable/ic_edit"
-                android:background="@drawable/solid_border"/>
+                android:background="@drawable/solid_border"
+                android:contentDescription="@string/edit"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 </layout>
