--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -3,6 +3,9 @@
     <item
         android:id="@+id/set_new_password"
         android:title="@string/set_password"
-        android:icon="@drawable/ic_baseline_lock"
-        android:checkable="true"/>
+        android:icon="@drawable/ic_baseline_lock" />
+    <item
+        android:id="@+id/notificationSettingsFragment"
+        android:title="@string/set_notification"
+        android:icon="@drawable/ic_baseline_notifications" />
 </menu>
