--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -40,4 +40,9 @@
             android:name="positive_emotion_id"
             app:argType="long" />
     </fragment>
+    <fragment
+        android:id="@+id/notificationSettingsFragment"
+        android:name="com.example.gratefulnote.notification.NotificationSettingsFragment"
+        android:label="Notification Settings"
+        tools:layout="@layout/fragment_notification_settings"/>
 </navigation>
