--- a/app/src/main/res/layout/fragment_notification_settings.xml
+++ b/app/src/main/res/layout/fragment_notification_settings.xml
@@ -34,13 +34,14 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="12dp">
             <TextView
+                android:id="@+id/mucul_setiap"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/notification_time_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:text="@string/muncul_setiap"/>
+                android:text="@string/muncul_setiap" />
             <TextView
                 android:id="@+id/notification_time_text"
                 android:layout_width="wrap_content"
@@ -49,7 +50,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="24dp"
                 tools:text="00:00"
-                android:text="@{viewModel.notificationTimeDisplay}"/>
+                android:text="@{viewModel.clockDisplay}" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
