FragmentManager untuk transfer data dan FixBug
- Sekarang perpindahan data antar fragment dan dialogfragment tidak lagi menggunakan SharedViewModel, tapi menggunakan FragmentManager agar lebih efisien dan lebih mudah debugging
- Bug dimana notification berulang-ulang muncul telah diperbaiki

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -33,7 +33,7 @@
         tools:layout="@layout/fragment_tope_help" />
     <fragment
         android:id="@+id/editPositiveEmotion"
-        android:name="com.example.gratefulnote.editpe.EditPositiveEmotion"
+        android:name="com.example.gratefulnote.editpositiveemotion.EditPositiveEmotion"
         android:label="@string/edit"
         tools:layout="@layout/fragment_edit_positive_emotion">
         <argument
