--- a/app/src/main/res/layout/fragment_edit_positive_emotion.xml
+++ b/app/src/main/res/layout/fragment_edit_positive_emotion.xml
@@ -11,7 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".editpe.EditPositiveEmotion">
+        tools:context=".editpositiveemotion.EditPositiveEmotion">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/edit_positive_emotion_title_layout"
