--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -8,4 +8,8 @@
         android:id="@+id/notificationSettingsFragment"
         android:title="@string/set_notification"
         android:icon="@drawable/ic_baseline_notifications" />
+    <item
+        android:icon="@drawable/ic_baseline_bug_report"
+        android:title="@string/feedback"
+        />
 </menu>
