--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -9,6 +9,7 @@
         android:title="@string/set_notification"
         android:icon="@drawable/ic_baseline_notifications" />
     <item
+        android:id="@+id/feedback"
         android:icon="@drawable/ic_baseline_bug_report"
         android:title="@string/feedback"
         />
