Berhasil implement fitur backup&restore

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -27,7 +27,7 @@
             android:id="@+id/empty_data_indicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/empty_data_text"
+            android:text="@string/belum_ada_data"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
