--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/set_new_password"
-        android:title="@string/set_password"
-        android:icon="@drawable/ic_baseline_lock" />
-    <item
         android:id="@+id/notificationSettingsFragment"
         android:title="@string/set_notification"
         android:icon="@drawable/ic_baseline_notifications" />
@@ -12,5 +8,10 @@
         android:id="@+id/feedback"
         android:icon="@drawable/ic_baseline_bug_report"
         android:title="@string/feedback"
+        />
+    <item
+        android:id="@+id/backupRestoreFragment"
+        android:icon="@drawable/ic_baseline_restore"
+        android:title="@string/backup_restore"
         />
 </menu>
