--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -45,4 +45,9 @@
         android:name="com.example.gratefulnote.notification.NotificationSettingsFragment"
         android:label="Notification Settings"
         tools:layout="@layout/fragment_notification_settings"/>
+    <fragment
+        android:id="@+id/backupRestoreFragment"
+        android:name="com.example.gratefulnote.backuprestore.BackupRestoreFragment"
+        android:label="fragment_backup_restore"
+        tools:layout="@layout/fragment_backup_restore" />
 </navigation>
